fix scrollbar bumping layout to the left by overflow-y: scroll;

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,11 +15,11 @@
 
 html {
   font-size: 100%;
-  overflow-y: overlay;
+  overflow-y: scroll;
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -76,7 +76,7 @@ p {
 a {
   color: $blue;
   text-decoration: none;
-	cursor: pointer;
+  cursor: pointer;
   &:hover, &:active {
     color: $blue;
   }
